# Q-chunking

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README_CN.md  bench_gpu.py  bench_gpu_plot.py  eval_video.py  log_utils.py  main.py  main_online.py  posthoc_direction_speed.py  pyproject.toml  replay_datasets.py  run_fql_h5_2m.sh  schedule.py  tasks.example.json
agents/: acrlpd.py
docs/: approach.md  data_migration.md  datasets.md  ds_arch_comparison.html  ds_exp_checklist.md  ds_open_questions.md  experiment_matrix.html  experiments.md  parallel_benchmark.md  plot_all_tasks.py  schedule.md
docs/data/: README.md
docs/data/DirSpeed_FQL_H5_2M/cube-triple-play-singletask-task2-v0/sd00020260608_164019/: eval.csv  flags.json
docs/data/DirSpeed_FQL_H5_2M/cube-triple-play-singletask-task2-v0/sd00020260608_180505/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00020260608_072648/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00020260608_081358/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00020260608_085747/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00120260608_072651/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00120260608_081531/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00120260608_085811/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00220260608_072804/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00220260608_081844/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-double-play-singletask-task2-v0/sd00220260608_090253/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-triple-play-singletask-task2-v0/sd00020260608_043700/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-triple-play-singletask-task2-v0/sd00020260608_053509/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-triple-play-singletask-task2-v0/sd00020260608_062939/: eval.csv  flags.json
docs/data/DirSpeed_RLPD_H5_500K/cube-triple-play-singletask-task2-v0/sd00120260608_043703/: eval.csv  flags.json
docs/data/fql_h5_2m/none_s0/: eval.csv  flags.json  online_agent.csv
docs/data/fql_h5_2m/none_s1/: eval.csv  flags.json  online_agent.csv
docs/data/fql_h5_2m/none_s2/: eval.csv  flags.json  online_agent.csv
docs/data/fql_h5_2m/posthoc_s0/: eval.csv  flags.json  online_agent.csv
docs/data/fql_h5_2m/posthoc_s1/: eval.csv  flags.json  online_agent.csv
docs/data/fql_h5_2m/posthoc_s2/: eval.csv  flags.json  online_agent.csv
docs/data/parallel_benchmark/: README.md
docs/data/parallel_benchmark/RTX4090_24GB/: results.json
docs/data/parallel_benchmark/RTX6000Ada_48GB/: results.json
docs/data/reproduce/QCRLPD_H5_10M/: eval.csv  flags.json  online_agent.csv
docs/data/reproduce/QC_H5_1M/: eval.csv  flags.json  online_agent.csv
docs/data/reproduce/RLPDAC_H5_10M/: eval.csv  flags.json  online_agent.csv
docs/data/reproduce/RLPD_H1_1M/: eval.csv  flags.json  online_agent.csv
docs/ds-visualizer/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
docs/ds-visualizer/scripts/: verify-theme.mjs
docs/ds-visualizer/src/: i18n.js  main.js  styles.css
docs/ds-visualizer/src/modules/: bijector-lab.js  ds-scenes.js  navigation.js  pipeline.js  speed-bound-lab.js
envs/: env_utils.py  libero_utils.py  ogbench_utils.py
rlpd_distributions/: __init__.py  direction_speed.py
utils/: encoders.py
(+106 files in other folders)
