[project]
name = "qc"
version = "0.1.0"
description = "Reinforcement Learning with Action Chunking (NeurIPS 2025)"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ---- ML core ----
    "jax>=0.9.0,<0.10.0",
    "jaxlib>=0.9.0,<0.10.0",
    "jax-cuda12-pjrt>=0.9.0,<0.10.0",
    "jax-cuda12-plugin>=0.9.0,<0.10.0",
    # jax-cuda12-plugin marks these as optional extras; pin explicitly
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-cupti-cu12>=12.1.105",
    "nvidia-cuda-nvcc-cu12>=12.6.85",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-cudnn-cu12>=9.8,<10.0",
    "nvidia-cufft-cu12>=11.0.2.54",
    "nvidia-cusolver-cu12>=11.4.5.107",
    "nvidia-cusparse-cu12>=12.1.0.106",
    "nvidia-nccl-cu12>=2.18.1",
    "nvidia-nvjitlink-cu12>=12.1.105",
    "flax>=0.10.0",
    "optax>=0.2.0",
    "distrax>=0.1.8",
    "tfp-nightly>=0.26.0.dev0",
    # ---- RL environments ----
    "gymnasium>=1.1.0",
    "gym>=0.24.0",
    "mujoco>=3.3.0",
    "dm-control>=1.0.0",
    "ogbench>=1.1.0",
    # ---- Datasets ----
    "robomimic>=0.3.0",
    "d4rl>=1.1",
    "h5py>=3.0",
    # LIBERO (requires manual git clone + pip install -e; these are its deps)
    "bddl>=1.0",
    "easydict>=1.9",
    "huggingface-hub>=0.20",
    # ---- PyTorch (CPU — for robomimic data loading only) ----
    # Install with: --index-url https://download.pytorch.org/whl/cpu
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    # ---- Logging ----
    "wandb>=0.19.0",
    "absl-py>=2.0",
    "ml-collections>=1.1.0",
    "tqdm>=4.0",
    # ---- Utils ----
    "numpy>=2.0",
    "imageio>=2.0",
    "imageio-ffmpeg>=0.6.0",
    "pillow>=11.0",
    # ---- Plotting ----
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.uv]
# PyTorch CPU wheels for robomimic compatibility
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
# torch from CPU-only index to avoid CUDA 13 conflict with JAX's CUDA 12
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
